--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        bookedJuly {
+            keyAlias 'weirdo'
+            keyPassword 'booked1201'
+            storeFile file('D:/bookedJuly.jks')
+            storePassword 'booked'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
-
     defaultConfig {
         applicationId "com.street35.booked"
         minSdkVersion 14
@@ -18,7 +25,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
@@ -35,22 +41,10 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
-
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-
-
-
-
-
-
-
-
-
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
@@ -65,15 +59,12 @@ dependencies {
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
     compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
     compile 'com.aurelhubert:ahbottomnavigation:1.3.3'
-
     compile 'com.google.android.gms:play-services-vision:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-ads:10.0.1'
@@ -81,13 +72,10 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.firebase:firebase-client-android:2.5.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
-
-
     compile('com.afollestad.material-dialogs:core:0.9.1.0') {
         transitive = true
     }
     compile 'me.zhanghai.android.materialprogressbar:library:1.3.0'
-
     testCompile 'junit:junit:4.12'
 }
 
